{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 190,
  "lineage": "a4c1b026-6432-47ad-4c39-d661a63476c9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0edab8d70528476d3",
            "arn": "arn:aws:ec2:us-west-2:477734749253:instance/i-0ce7385077a2b9651",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ce7385077a2b9651",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "jenkinsnew",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00449063185e950b1",
            "private_dns": "ip-172-2-0-19.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.2.0.19",
            "public_dns": "ec2-52-35-251-226.us-west-2.compute.amazonaws.com",
            "public_ip": "52.35.251.226",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e1e1370f49dab37c",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-094c42e9975a63053",
            "tags": {
              "Name": "JenkinsInstance 0"
            },
            "tags_all": {
              "Name": "JenkinsInstance 0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ce81cd7bc3de98da"
            ]
          },
          "dependencies": [
            "aws_security_group.ingress-policy",
            "aws_subnet.cidr",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0edab8d70528476d3",
            "arn": "arn:aws:ec2:us-west-2:477734749253:instance/i-08bb92ca3b4ea107e",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08bb92ca3b4ea107e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "jenkinsnew",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-064974cc0a6383c4d",
            "private_dns": "ip-172-2-0-244.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.2.0.244",
            "public_dns": "ec2-35-91-9-205.us-west-2.compute.amazonaws.com",
            "public_ip": "35.91.9.205",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-037ef51d5e6eb00ba",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-094c42e9975a63053",
            "tags": {
              "Name": "JenkinsInstance 1"
            },
            "tags_all": {
              "Name": "JenkinsInstance 1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ce81cd7bc3de98da"
            ]
          },
          "dependencies": [
            "aws_security_group.ingress-policy",
            "aws_subnet.cidr",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0edab8d70528476d3",
            "arn": "arn:aws:ec2:us-west-2:477734749253:instance/i-095584abcec0730e2",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-095584abcec0730e2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "jenkinsnew",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e82c18e48633cd6b",
            "private_dns": "ip-172-2-0-167.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.2.0.167",
            "public_dns": "ec2-35-88-218-245.us-west-2.compute.amazonaws.com",
            "public_ip": "35.88.218.245",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b5530f2d33e71036",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-094c42e9975a63053",
            "tags": {
              "Name": "JenkinsInstance 2"
            },
            "tags_all": {
              "Name": "JenkinsInstance 2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ce81cd7bc3de98da"
            ]
          },
          "dependencies": [
            "aws_security_group.ingress-policy",
            "aws_subnet.cidr",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0edab8d70528476d3",
            "arn": "arn:aws:ec2:us-west-2:477734749253:instance/i-0d372d52e86fe851f",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d372d52e86fe851f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "jenkinsnew",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03d6261c862aef1b6",
            "private_dns": "ip-172-2-0-92.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.2.0.92",
            "public_dns": "ec2-54-202-92-199.us-west-2.compute.amazonaws.com",
            "public_ip": "54.202.92.199",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01ef483be3e73ebfb",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-094c42e9975a63053",
            "tags": {
              "Name": "JenkinsInstance 3"
            },
            "tags_all": {
              "Name": "JenkinsInstance 3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ce81cd7bc3de98da"
            ]
          },
          "dependencies": [
            "aws_security_group.ingress-policy",
            "aws_subnet.cidr",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:477734749253:internet-gateway/igw-0c57aa0ca566fa221",
            "id": "igw-0c57aa0ca566fa221",
            "owner_id": "477734749253",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-098d49fe2f2a9cbf0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c57aa0ca566fa221",
            "id": "r-rtb-07bbbc6f495a3cca91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07bbbc6f495a3cca9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:477734749253:route-table/rtb-07bbbc6f495a3cca9",
            "id": "rtb-07bbbc6f495a3cca9",
            "owner_id": "477734749253",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-098d49fe2f2a9cbf0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08652af73757ea10c",
            "route_table_id": "rtb-07bbbc6f495a3cca9",
            "subnet_id": "subnet-094c42e9975a63053"
          },
          "dependencies": [
            "aws_route_table.rt",
            "aws_subnet.cidr",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress-policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:477734749253:security-group/sg-0ce81cd7bc3de98da",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ce81cd7bc3de98da",
            "ingress": [
              {
                "cidr_blocks": [
                  "89.211.222.223/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230325201556429200000001",
            "name_prefix": "terraform-",
            "owner_id": "477734749253",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-private"
            },
            "tags_all": {
              "Name": "sg-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-098d49fe2f2a9cbf0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:477734749253:subnet/subnet-094c42e9975a63053",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "172.2.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094c42e9975a63053",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "477734749253",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-098d49fe2f2a9cbf0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:477734749253:vpc/vpc-098d49fe2f2a9cbf0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.2.0.0/16",
            "default_network_acl_id": "acl-07a0971fd12f28f66",
            "default_route_table_id": "rtb-0a98b4f28c249fe7e",
            "default_security_group_id": "sg-0e5bb58064c37c220",
            "dhcp_options_id": "dopt-01c65296911abd48e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-098d49fe2f2a9cbf0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a98b4f28c249fe7e",
            "owner_id": "477734749253",
            "tags": {
              "Name": "terraform-ashok"
            },
            "tags_all": {
              "Name": "terraform-ashok"
            }
          }
        }
      ]
    }
  ]
}